# saga-watem

./: .drone.yml  .gitattributes  .gitignore  CMakeLists.txt  CMakePluginTemplate.cmake  README.fluves  README.fluves.md  README.md  saga_setup_win32.iss  saga_setup_x64.iss  version.cmake
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml  docker-cmake-bullseye.yml  docker-cmake.yml  release.yml
ci/: Dockerfile  Dockerfile-bionic  Dockerfile-bookworm  Dockerfile-bullseye  Dockerfile-focal  Dockerfile-windows  build-containers.sh  build-upload.sh  build-win.bat
cmake/: Config.cmake  config.h.cmake
debian/: changelog  control  copyright  libsaga-api-7.4.0.install  libsaga-dev.install  libsaga-gdi-7.4.0.install  python-saga.install  rules  saga-common.install  saga.lintian-overrides  saga_gui.pod  watch
debian/source/: lintian-overrides
docker/: Dockerfile
docs/: erosiekaart.md  potential_erosion_map.md  topology.md
network/: CMakeLists.txt
network/line_direction/: CMakeLists.txt  LineDirection.cpp  LineDirection.h  MLB_Interface.cpp  (+1 more)
saga-gis/: CMakeLists.txt  configure.ac  version.cmake
saga-gis/src/tools/network/line_direction/: LineDirection.cpp  LineDirection.h  MLB_Interface.cpp  Makefile.am  line_direction.vcxproj
saga-gis/src/tools/network/topologize/: Makefile.am  TLB_Interface.cpp  cacyclical.cpp  cacyclical.h  routing_shape.cpp  routing_shape.h  segment_catchment.cpp  topologize.cpp  topology.vcxproj  upstream_edges.cpp  upstream_edges.h
saga-gis/src/tools/watem/watem/: CMakeLists.txt  Calculate_C_Grid.cpp  Calculate_LS_Watem.cpp  Calculate_LS_Watem.h  Calculate_Uparea.cpp  Calculate_Uparea.h  Complete.cpp  Complete.h  Create_Parcel_Grid.cpp  Create_Parcel_Grid.h  MLB_Interface.cpp  MLB_Interface.h  Makefile.am  Parcel_Filter.cpp  PitStuff.cpp  Pitstuff.h  TLB_Interface.cpp  Tillage_Erosion.cpp  Tillage_Erosion.h  Water_Erosion.cpp  Water_Erosion.h  watem.vcxproj  watem.vcxproj.filters
src/: CMakeLists.txt
tests/: test_topology.py  test_watem.py
watem/: CMakeLists.txt
(+170 files in other folders)
